# cml-assignment

./: CML_2026-04-27#3-dataset1.csv  CML_2026-04-27#4-dataset2.csv  CML_2026-04-27#5-dataset3.csv  CML_2026-04-27#6-dataset4.csv  README.md  cml-assignment.html  cml-assignment.ipynb  main.py  pyproject.toml
