[project]
name = "cml-assignment"
version = "0.1.0"
description = "Assignment for the Classical Machine Learning (CML) module held at the MSc Software Engineering Programme in Oxford University."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
